# forgerack

./: CLAUDE.md  pyproject.toml
css/: components.css
docs/: BUILDING_UNITS.md  CSS_TECHNIQUES.md  DESIGN_REFERENCE.md
js/: components.js  layout-check.js  units.js  units_mfd.js  wiring.js
src/forgerack/: __init__.py
src/forgerack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/forgerack/static/css/: components.css  rack.css
src/forgerack/static/js/: components.js  unit-csv-input.js  units.js  units_mfd.js  wiring.js
src/forgerack/static/units/designer/: unit.html
src/forgerack/static/units/mfd/: unit.html
src/forgerack/static/units/mixer/: unit.html
src/forgerack/templates/forgerack/units/: analyst.html  calc.html  chart-panel.html  clock.html  combinator.html  comparator.html  correlator.html  (+17 more)
units/analyst/: unit.html
units/blank-2u/: unit.html
units/calc/: unit.html
units/chart-panel/: unit.html
units/combinator/: unit.html
units/comparator/: unit.html
units/correlator/: unit.html
units/counter/: unit.html
units/csv-input/: unit.html
units/designer/: unit.html
units/filter/: unit.html
units/formula/: unit.html
units/intake/: unit.html
units/narrative/: unit.html
units/precision/: unit.html
units/probe/: unit.html
units/readout/: unit.html
units/router/: unit.html
units/scribble/: unit.html
units/sentinel/: unit.html
units/spectrum/: unit.html
units/splitter/: unit.html
units/strategist/: cutout.html  layout.json  unit.html  unit.html.bak
units/threshold/: unit.html
units/triage/: unit.html
(+15 files in other folders)
